@@ -18,3 +18,4 @@
  8-Oct-2021 - V0.25 Pass configuration URLs to CurrentHoldingsProvider and RemoveHoldingsProvider
                     ValidationReportProvider() migrated to ValidationReportAdapter()
  8-Oct-2021 - V0.26 Add warning messages for empty read/merge container results in method __mergeContainers()
+12-Oct-2021 - V0.27 Preserve the order of processing for input idCodeLists in RepositoryProvider()
